# retail-forecast-dashboard

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
analysis/: __init__.py  forecast.py
app/: __init__.py  main.py
data/: sales.csv
static/: index.html
tests/: __init__.py  test_forecast.py
